--- a/css/default.styl
+++ b/css/default.styl
@@ -58,8 +58,7 @@ iframe
 				position absolute
 				top 6%
 				left 5%
-		
-		[class*='column-'] 
+		[class*='column-']
 			float: left;
 			img
 				width 100%
@@ -168,6 +167,32 @@ iframe
 	.off
 		display none
 		
+.lnt-popup
+	.lnt-popup-wrapper
+		background-color transparent
+		.content-pop
+			border 2px solid #fff
+			border-radius 20px
+			padding 15px
+			height 100%
+			.info-pop
+				background-image url('../img/background-pop.png')
+				background-repeat no-repeat
+				background-size cover
+				padding 5px 15px
+				border-radius 15px
+				height 100%
+				.txt
+					color #fff
+					font-size 23px
+					text-align center
+				img
+					width 100%
+			.dflex-pop
+				display flex
+				justify-content center
+				align-items center
+		
 
 #pt-page-0
 	.pageSheet
@@ -177,12 +202,14 @@ iframe
 				position: absolute
 				width 160px
 				left -50px
+				opacity 0
 			.element2
 				position: absolute
 				width 80%
 				top 50%
 				left 50%
 				transform translate(-50%, -50%)
+				opacity 0
 				
 #pt-page-1
 	.pageSheet
@@ -205,6 +232,8 @@ iframe
 						border-radius 7px
 						background-color rgba(255,255,255,0.4)
 						padding 5px
+						opacity 0
+						transition opacity 1s
 						p
 							text-align right !important
 							span
@@ -217,13 +246,15 @@ iframe
 					.boxesp2:nth-child(-n+4)
 						height 250px
 						margin-bottom 20px
-						margin-top 26px
+						margin-top 24px
 				.absElements
 					position absolute
+					cursor pointer
 				.inicio
 					transform rotate(-89.7deg)
 					top 100px
 					left -120px
+					opacity 0
 				.acciones
 					right 20px
 					top -5px
@@ -332,6 +363,7 @@ iframe
 					width 95%
 					height 65px
 					margin 0 auto
+					cursor pointer
 					.ico
 						margin-right 10px
 			.fila2
@@ -343,3 +375,209 @@ iframe
 					margin 0 auto
 					margin-top 30px
 					height 300px
+					opacity 0
+#pt-page-5
+	.pageSheet
+		.contentSheet
+			.colPage
+				height 85%
+				display flex
+				flex-direction row
+				justify-content center
+				align-items center
+				.icos
+					.imgIco4
+						width 192px
+						margin 35px auto 20px
+#pt-page-6
+	.pageSheet
+		.contentSheet
+			.colPage
+				height 85%
+				display flex
+				align-items center
+				
+#pt-page-7
+	.pageSheet
+		.contentSheet
+			.colPage
+				height 85%
+				display flex
+				align-items center
+				justify-content center
+				flex-direction column
+				
+#pt-page-8
+	.pageSheet
+		.contentSheet
+			.colPage
+				height 85%
+				display flex
+				align-items center
+				justify-content center
+				flex-direction row
+				.col1
+					padding 10px
+					.imgIco
+						width 200px
+						margin 0 auto
+				.preview
+					position relative
+					height 590px
+					.customImg
+						position absolute
+						width 820px
+						cursor pointer
+						transition all 0.5s ease-out
+						display none
+					.customImg:nth-child(1)
+						top 0
+						&:hover
+							top -20px
+					.customImg:nth-child(2)
+						bottom 0
+						&:hover
+							bottom 20px
+						
+#pt-page-9
+	.pageSheet
+		.contentSheet
+			.colPage
+				height 100%
+				display flex
+				align-items center
+				justify-content center
+				flex-direction column
+				.imgIco
+					width 200px
+					margin 0 auto 10px
+				.colSection
+					display flex
+					flex-direction row
+					justify-content center
+					align-items baseline
+					div
+						padding 10px
+						ul
+							list-style-position inside
+							opacity 0
+							transition opacity ease-in-out .5s
+							li
+								text-align center
+								color #fff
+					div:nth-child(3)
+						margin-bottom 90px
+						
+#pt-page-10
+	.pageSheet
+		.contentSheet
+			.colPage
+				height 100%
+				display flex
+				align-items baseline
+				justify-content center
+				flex-direction row
+				padding-top 30px
+				position relative
+				.flecha
+					position absolute
+					top 50%
+					left 38%
+					transform translate(-38%, -50%)
+					cursor pointer
+					width 70px
+					opacity 0
+					img
+						width 100%
+				.imgIco
+					width 200px
+					margin 0 auto
+				.customCol
+					background-color rgba(255, 255, 255, .3)
+					padding 150px 15px 15px 15px
+					position relative	
+					opacity 0
+					transition all ease-in-out .5s				
+					.stick
+						position absolute
+						left 50%
+						transform translateX(-50%)
+						top -100px
+						.box
+							background-color #a9cd5d
+							color #373738 !important
+							padding 10px
+							
+#pt-page-11
+	.pageSheet
+		.contentSheet
+			.gallery
+				height 100%
+				.viewer
+					width 90%
+					margin 0 auto
+					height 80%
+					position relative
+					.slide
+						width 70%
+						opacity 0
+						position absolute
+						left 50%
+						transform translateX(-50%)
+						transition all ease .7s
+						img
+							width 100%
+					#slide1
+						opacity 1
+				.controls
+					height 10%
+					width 20%
+					margin auto
+					.arrows
+						margin 0px 10px
+						padding 5px 0
+						width 40%
+						display inline-block
+						vertical-align top
+						font-size 46px
+						text-align center
+						color #fff
+						cursor pointer
+						position relative
+						z-index 999
+						
+				
+#pt-page-12
+	.pageSheet
+		.contentSheet
+			.colPage
+				height 100%
+				display flex
+				align-items center
+				justify-content center
+				flex-direction column
+				padding 50px
+				.imgIco
+					width 200px
+					margin 0 auto 10px
+				ul
+					li
+						list-style-position: outside
+						margin-bottom 5px
+						span 
+							background-color #bfdd01
+							
+#popup-4, #popup-5
+	.lnt-popup-wrapper
+		width 1200px !important
+		.lnt-popup-content
+			height auto !important
+			.full-image
+				width 80%
+				margin 0 auto
+				img
+					width 100%
+			
+							
+						
+						
