--- a/css/default.styl
+++ b/css/default.styl
@@ -188,6 +188,12 @@ iframe
 					text-align center
 				img
 					width 100%
+				ul
+					list-style-position inside
+					transition opacity ease-in-out .5s
+					li
+						text-align center
+						color #fff
 			.dflex-pop
 				display flex
 				justify-content center
@@ -375,7 +381,7 @@ iframe
 					margin 0 auto
 					margin-top 30px
 					height 300px
-					opacity 0
+					
 #pt-page-5
 	.pageSheet
 		.contentSheet
@@ -456,15 +462,10 @@ iframe
 					flex-direction row
 					justify-content center
 					align-items baseline
+					.tAction
+						cursor pointer
 					div
 						padding 10px
-						ul
-							list-style-position inside
-							opacity 0
-							transition opacity ease-in-out .5s
-							li
-								text-align center
-								color #fff
 					div:nth-child(3)
 						margin-bottom 90px
 						
